# arkanoid

./: .clang-format  .gitignore  1  AGENTS.md  CMakeLists.txt  README.md  practico_0.cpp  toolchain-mingw64.cmake
assets/meshes/: column.fbx  moai.fbx
assets/meshes/racoon/: license.txt  scene.gltf
assets/meshes/sarge/: license.txt  scene.gltf
assets/meshes/transformer/: tranformer.gltf
assets/practico/2/: lightPolygons.txt  polygons.txt
assets/practico/3/: sprites.xml
assets/textures/: terrain_atlas.ppm
scripts/: build-mingw64.sh  build.sh  skybox-gen.sh
scripts/build-step/: components-index.sh
src/: Vector3.hpp  action.hpp  actions.hpp  application.cpp  application.hpp  chronometer.hpp  colorPolygon.cpp  coord.hpp  emptySDL.cpp  firstPolygon.cpp  fractal.cpp  frame_context.hpp  game.hpp  gameOfLife.cpp  input.hpp  inputs.hpp  proyectil.cpp  ray_march.hpp  vec3.hpp  world.hpp
src/arkanoid/: arkanoid.hpp  constants.hpp  events.hpp  input.hpp  main.cpp  settings.hpp
src/arkanoid/nodes/: arkanoid_node.hpp  board.hpp  camera_control.hpp  column.hpp  comet.hpp  current_transformer.hpp  defeat_screen.hpp  energy_explosion.hpp  explosive_barrel.hpp  fire.hpp  fire_explosion.hpp  frame_rate.hpp  game_control.hpp  goal.hpp  human.hpp  level.hpp  map.hpp  moai.hpp  player.cpp  player.hpp  progress_bar.hpp  projectile.cpp  projectile.hpp  render_control.hpp  root.hpp  scene_light.hpp  settings_hud.hpp  skybox.hpp  snail.hpp  teapot.hpp  terrain.hpp  time_speed.hpp  victory_screen.hpp  window_control.hpp
src/arkanoid/nodes/mixins/: distance_culled.hpp  falling.hpp
src/oh-my-engine/: blend_mode.hpp  camera.hpp  chronometer.hpp  collision_server.cpp  collision_server.hpp  color.hpp  constants.hpp  copy_const.hpp  curve.hpp  debug_ui.cpp  debug_ui.hpp  draw_command.cpp  draw_command.hpp  events.hpp  fog.hpp  game.cpp  game.hpp  harmonic_oscillator_curve.hpp  imgui.cpp  imgui.hpp  input.hpp  interpolation.hpp  interpolator.hpp  light.cpp  light.hpp  logger.hpp  material.hpp  member_forwarding_macro.hpp  mesh.cpp  mesh.hpp  node.hpp  node_composition.hpp  object_registry.hpp  particles_server.hpp  pause.hpp  ray_march.hpp  render_frame.hpp  shared_from.hpp  skybox.hpp  slot_map.hpp  (+9 more)
src/oh-my-engine/.deprecated/entity-component-system/: entity.hpp  system_store.hpp
src/oh-my-engine/.deprecated/entity-component-system/components/: color.hpp  hit_sphere.hpp  position.hpp
src/oh-my-engine/entity-component-system/: component.cpp  component.hpp  component_meta_registry.hpp  component_store.hpp  entity.hpp  entity_store.hpp  system.hpp  system_store.hpp
src/oh-my-engine/entity-component-system/components/: position.hpp  velocity.hpp
src/oh-my-engine/math/: ball.hpp  box.hpp  cone.hpp  curve.hpp  functions.hpp  interval.hpp  orientation.hpp  region.hpp  sphere.hpp  uniform_distribution.hpp  vector.hpp
src/oh-my-engine/nodes/: gravity_node.hpp  hitbox_node.hpp  kinematic_node.hpp  light_node.hpp  mesh_node.hpp  particle_emitter_node.hpp  scripted_node.hpp  slowed_node.hpp  transform_node.hpp
src/oh-my-engine/nodes/mixins/: despawning.hpp  disableable.hpp  eventful.hpp  slowed.hpp
src/oh-my-engine/open_gl/: bind_light.cpp  bind_material.cpp  blend_mode.hpp  matrix_guard.hpp  matrix_mode_guard.hpp  matrix_state_guard.hpp  render_billboard.hpp  render_box.hpp  render_frame.cpp  render_mesh.hpp  render_quad.hpp  render_skybox.cpp  texture_binding_guard.hpp
src/oh-my-engine/sdl/: event_handler.hpp
src/soccernoid/: actions.hpp  constants.hpp  events.hpp  input.hpp  main.cpp  settings.hpp  soccernoid.hpp
src/soccernoid/nodes/: ball.hpp  board.hpp  camera_control.hpp  column.hpp  comet.hpp  current_transformer.hpp  defeat_screen.hpp  energy_explosion.hpp  explosive_barrel.hpp  fbx_character.hpp  fire.hpp  fire_explosion.hpp  fire_node.hpp  frame_rate.hpp  game_control.hpp  goal.hpp  human.hpp  level.hpp  map.hpp  moai.hpp  obstacle.hpp  player.cpp  player.hpp  progress_bar.hpp  projectile.cpp  projectile.hpp  render_control.hpp  root.hpp  scene_light.hpp  scene_lights.hpp  settings_hud.hpp  skybox.hpp  snail.hpp  soccernoid_node.hpp  teapot.hpp  terrain.hpp  time_speed.hpp  victory_screen.hpp  wall.hpp  window_control.hpp  (+1 more)
src/soccernoid/nodes/mixins/: distance_culled.hpp  falling.hpp
src/soccernoid/nodes/spikes/: particles_test.hpp
src/spikes/: colorPolygon.cpp  emptySDL.cpp  firstPolygon.cpp  fractal.cpp  gameOfLife.cpp
